err/komodo-pydbgp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dbgp'...
Compiling './lib/python3.5/site-packages/dbgp/_pyclient.py'...
***   File "./lib/python3.5/site-packages/dbgp/_pyclient.py", line 118
    except DBGPQuit, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dbgp/darwin'...
Listing './lib/python3.5/site-packages/dbgp/linux32'...
Listing './lib/python3.5/site-packages/dbgp/linux64'...
Compiling './lib/python3.5/site-packages/dbgp/listcmd.py'...
***   File "./lib/python3.5/site-packages/dbgp/listcmd.py", line 313
    except TypeError, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dbgp/server.py'...
***   File "./lib/python3.5/site-packages/dbgp/server.py", line 184
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dbgp/serverBase.py'...
***   File "./lib/python3.5/site-packages/dbgp/serverBase.py", line 67
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dbgp/win32'...
Listing './lib/python3.5/site-packages/komodo_pydbgp-10.2.2.89895.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
